2008-08-10  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	 gl.po: Updated Galician translation

2008-08-08  Michael Natterer  <mitch@gimp.org>

	* POTFILES.in: s/triangle/wheel/

2008-08-08  Djihed Afifi <djihed@gmail.com> 

	* ar.po: Updated Arabic Translation by Khaled Hosny.

2008-07-31  Djihed Afifi <djihed@gmail.com> 

	* ar.po: Updated Arabic Translation by .

2008-07-31  Djihed Afifi <djihed@gmail.com> 

	* ar.po: Updated Arabic Translation by .

2008-07-26  Marco Ciampa  <ciampix@libero.it>

	* it.po: updated italian translation.

2008-07-22  Gil Forcada  <gforcada@gnome.org>

	* ca.po: Updated Catalan translation by Joaquim Perez.

2008-07-22  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* gl.po: Updated Galician Translation by Frco. Javier Rial.

2008-07-21  Ihar Hrachyshka <ihar.hrachyshka@gmail.com>

	* be.po: Updated Belarusian translation by Hleb Valoshka.

2008-07-17  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* es.po: Updated Spanish translation by Francisco Vila

2008-07-17  Žygimantas Beručka  <zygis@gnome.org>

	* lt.po: Updated Lithuanian translation.

2008-07-12  Daniel Nylander <po@danielnylander.se>

	* sv.po: Updated Swedish translation.

2008-07-11  Sven Neumann  <sven@gimp.org>

	* POTFILES.in: fix intltool warning by adding gimpcpuaccel.c

	* de.po: updated german translation.

2008-07-03  Yannig Marchegay <yannig@marchegay.org>

	* oc.po: Updated Occitan translation.

2008-07-02  Takeshi AIHANA <takeshi.aihana@gmail.com>

	* ja.po: Updated Japanese translation by Kiyotaka Nishibori.

2008-06-24  Gil Forcada  <gforcada@gnome.org>

	* ca.po: Updated Catalan translation by Joaquim Perez.

2008-06-06  Sven Neumann  <sven@gimp.org>

	* POTFILES.skip: fixed the insanity using a new feature in
	intltool 0.40.0 that allows us to skip whole directories.

2008-06-02  Alexandre Prokoudine  <alexandre.prokoudine@gmail.com>

        * ru.po: updated and improved Russian translation.

2008-05-24  Mugurel Tudor  <mugurelu@gnome.ro>
