@@ -1,6 +1,12 @@
+2008-08-11  Sven Neumann  <sven@gimp.org>
+
+	* POTFILES.in: follow name changes in the modules directory.
+
+	* de.po: updated German translation.
+
 2008-08-10  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
 
-	 gl.po: Updated Galician translation
+	* gl.po: Updated Galician translation
 
 2008-08-08  Michael Natterer  <mitch@gimp.org>
 
